# openfoodfacts-python

./: .coveragerc  .flake8  .gitignore  .release-please-manifest.json  .travis.yml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  draft.py  index.html  mkdocs.yml  publish.sh  pyproject.toml  release-please-config.json  requirements.txt  requirements_test.txt  setup.cfg  setup.py  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: autoblack.yml  ci.yml  codeql-analysis.yml  generate-docs.yml  github-projects.yml  label.yml  publish-conda.yml  pypi.yml  release-please.yml
Usage/: index.html
conda/: conda_build_config.yaml  meta.yaml
data-quality-scripts/: switch_ingredient_lang.py
docs/: .pages  Usage.md  _config.yml  handle_taxonomies.md  index.md  usage.md
handle_taxonomies/: index.html
openfoodfacts/: __init__.py  api.py  autosuggest.py  barcode.py  dataset.py  facets.py  images.py  ingredients.py  ocr.py  openbeautyfacts.py  openpetfoodfacts.py  products.py  redis.py  taxonomy.py  types.py  utils.py
search/: search_index.json
tests/: beautyproducts_test.py  facets_test.py  petproducts_test.py  products_test.py  test_api.py  test_api_config.py  test_barcode.py  test_images.py  test_ocr.py  test_redis.py  test_utils.py
usage/: index.html
use_taxonomy/: index.html
