[tool.poetry]
name = "openfoodfacts"
version = "0.2.1"
description = "Official Python SDK of Open Food Facts"
authors = ["The Open Food Facts team"]
license = "Apache 2.0"
readme = "README.md"

[tool.mypy]
ignore_missing_imports = true

[tool.isort] # From https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = ">=2.20.0"
pydantic = ">=2.0.0,<3.0.0"
tqdm = ">=4.0.0,<5.0.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "1.11.0"
flake8 = "6.0.0"
black = "24.3.0"
mypy = "1.3.0"
isort = "5.12.0"
coverage = {version = "7.2.7", extras = ["toml"]}
pytest = "7.4.2"
types-requests = "2.31.0.2"
types-tqdm = "4.65.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
