[metadata]
name = openfoodfacts
version = attr: openfoodfacts.__version__
author = The Open Food Facts team
author_email = contact@openfoodfacts.org
description = Official Python SDK of Open Food Facts
long_description = file: README.rst
license = Apache 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    requests >= 2.20.0
    pydantic >= 1.10.0, <2.0.0

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
exclude =
    tests*